--- a/mtgcardlist/src/App.css
+++ b/mtgcardlist/src/App.css
@@ -1,36 +1,49 @@
+.header{
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  padding: 20px;
+  background-color: #373737;
+  align-items: center;
+}
 
-.test {
+.header img{ 
+  height: 25px;
+}
+
+.header a{
+  color: #DDDDDD;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-family: 'Roboto', sans-serif;
+}
+
+.header a:hover{ 
+  color: #C3C3C3;
+}
+
+.one-card {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 10vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card-size{
+  max-width: 400px;
 }
 
 .non-legal-badge{
-  color: red;
+  color: aliceblue;
+  background-color: red;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 3px;
 }
 
 .legal-badge{
-  color: green;
+  color: aliceblue;
+  background-color: green;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-radius: 3px;
 }
 
 .box-legal{
@@ -39,5 +52,23 @@
   padding-bottom: 30px;
   margin-left: 40px;
   margin-right: 40px;
+  margin-top: 60px;
   border-radius: 10px;
+}
+
+.new-card-button{
+  margin-top: 30px;
+}
+
+
+.select-set{
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.card-list-row{
+  padding: 20px;
+}
+.card-list-col{
+  padding-top: 20px;
 }
